# tire_store

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  hatch.toml  pyproject.toml
backend/app/: main.py  models.py
backend/app/alembic/: env.py  script.py.mako
backend/app/alembic/versions/: 902edda152e7_add_user.py
backend/app/api/: deps.py  main.py
backend/app/auth/: router.py
backend/app/core/: config.py  db.py  security.py
backend/app/request/: urls.py
backend/app/user/: crud.py  models.py  router.py
scripts/: generate-env.sh  generate_env.sh  start-server.sh
