[project]
name = "tire_shop"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "albus.cygnus", email = "albus.cygnus@yandex.ru" },
]

dependencies = [
  "fastapi>=0.115.3",
  "faststream[rabbit]>=0.5.23",
  "sqlmodel>=0.0.22",
  "alembic>=1.3.2",
  "pydantic-settings>=2.5.2",
  "tenacity>=9.0.0",
  "pyjwt>=2.9.0",
  "passlib>=1.7.4",
  "bcrypt==4.0.1",
  "psycopg[binary,pool]>=3.2.2",
  "email-validator<3.0.0.0,>=2.1.0.post1",
  "emails<1.0,>=0.6",
  "pytest>=8.3.3",
  "vakt[redis]>=1.6.0",
  "httpx>=0.27.2",
  "Jinja2>=3.1.4",
  "python-multipart>=0.0.17",
]

[dependency-groups]
dev = [
    "fastapi[standard]>=0.115.3",
    "faststream[cli]>=0.5.25",
    "ruff>=0.7.2",
    "mypy>=1.13.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.14.0",
]

[project.scripts]
start-dev = "fastapi dev --host 0.0.0.0 app/main.py"
lint-check = "ruff check app"
lint-format = "ruff format app"
prestart = "python -m app.backend_pre_start && python -m alembic upgrade head && python -m app.initial_data"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
  "-vv",
  "--import-mode=importlib"
]
pythonpath = ["."]
